--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!--RODAPÉ INICIAL-->
     <header>
       <h1 class="fonte">Confeitos da Jô</h1>
-      <a href="../Trabalho Confeitaria/opçoes.html"> Produtos </a>
+      <a href="../opçoes.html"> Produtos </a>
       <a href="#Sobre"> Sobre </a>
       <a href="#pitch"> Pitch </a>
       <a href="#contato"> Contato </a>
