--- a/bolocaseiro.html
+++ b/bolocaseiro.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Trabalho Confeitaria/produtos.css">
-    <link rel="shortcut icon" href="../Trabalho Confeitaria/IMAGENS/bolo-icon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../produtos.css">
+    <link rel="shortcut icon" href="../IMAGENS/bolo-icon.ico" type="image/x-icon">
     <title>Confeitos da Jô</title>
 </head>
 <body>
     <h1>Aqui estão nossas opções de bolos caseiros para você</h1>
-    <form action="../Trabalho Confeitaria/pedido.php" method="get">
+    <form action="../pedido.php" method="get">
         <main>
             <div class="container">
                 <div class="card">
                     <div class="face face1">
                         <div class="content">
-                            <img src="../Trabalho Confeitaria/IMAGENS/Bolo-Mesclado_2.jpg" class="im1">
+                            <img src="../IMAGENS/Bolo-Mesclado_2.jpg" class="im1">
                             <h2>Bolo Mesclado</h2>
                         </div>
                     </div>
@@ -33,7 +33,7 @@
                 <div class="card">
                     <div class="face face1">
                         <div class="content">
-                            <img src="../Trabalho Confeitaria/IMAGENS/bolocenoura_3.jpg">
+                            <img src="../IMAGENS/bolocenoura_3.jpg">
                             <h3>Bolo de Cenoura</h3>
                         </div>
                     </div>
@@ -49,7 +49,7 @@
                 <div class="card">
                     <div class="face face1">
                         <div class="content">
-                            <img src="../Trabalho Confeitaria/IMAGENS/bolomilho.jpg">
+                            <img src="../IMAGENS/bolomilho.jpg">
                             <h3>Bolo de Milho</h3>
                         </div>
                     </div>
