--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-  <link rel="shortcut icon" href="../Trabalho Confeitaria/IMAGENS/bolo-icon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="IMAGENS/bolo-icon.ico" type="image/x-icon">
   <title>Confeitaria da Jô</title>
 </head>
 
@@ -17,7 +17,7 @@
   <!--RODAPÉ INICIAL-->
     <header>
       <h1 class="fonte">Confeitos da Jô</h1>
-      <a href="../opçoes.html"> Produtos </a>
+      <a href="opçoes.html"> Produtos </a>
       <a href="#Sobre"> Sobre </a>
       <a href="#pitch"> Pitch </a>
       <a href="#contato"> Contato </a>
