--- a/opçoes.html
+++ b/opçoes.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Confeitos da Jô</title>
-    <link rel="stylesheet" href="../Trabalho Confeitaria/opçoes.css">
-    <link rel="shortcut icon" href="../Trabalho Confeitaria/IMAGENS/bolo-icon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="opçoes.css">
+    <link rel="shortcut icon" href="IMAGENS/bolo-icon.ico" type="image/x-icon">
 </head>
 <body>
   <!--H1-->
@@ -20,7 +20,7 @@
     <div class="content">
       <h2 class="title">Bolos de festa</h2>
       <p class="copy">Veja aqui nossos bolos para suas festas.</p>
-      <a href="../Trabalho Confeitaria/bolofesta.html">
+      <a href="bolofesta.html">
         <button class="btn">Escolha já o seu</button>
       </a>
     </div>
@@ -31,7 +31,7 @@
     <div class="content">
       <h2 class="title">Doces</h2>
       <p class="copy">Veja aqui nossos doces para suas festas</p>
-      <a href="../Trabalho Confeitaria/doce.html">
+      <a href="doce.html">
       <button class="btn">Escolha já o seu</button>
     </a>
     </div>
@@ -42,7 +42,7 @@
     <div class="content">
       <h2 class="title">Bolos caseiros</h2>
       <p class="copy">Veja aqui nossos bolos caseiros para acompanhar seu cafezinho.</p>
-      <a href="../Trabalho Confeitaria/bolocaseiro.html">
+      <a href="bolocaseiro.html">
         <button class="btn">Escolha já o seu</button>
       </a>
     </div>
@@ -53,7 +53,7 @@
     <div class="content">
       <h2 class="title">Sobremesas</h2>
       <p class="copy">Veja aqui nossas sobremesas para adoçar o seu dia.</p>
-      <a href="../Trabalho Confeitaria/sobremesa.html">
+      <a href="sobremesa.html">
         <button class="btn">Escolha já o seu</button>
       </a>
     </div>
