--- a/sobremesa.html
+++ b/sobremesa.html
@@ -12,7 +12,7 @@
     
 <body>
     <h1>Aqui estão nossas opções de sobremesas para você</h1>
-    <form action="../Trabalho Confeitaria/pedido.php" method="get">
+    <form action="pedido.php" method="get">
         <main>
             <div class="container">
                 <div class="card">
