--- a/sobremesa.html
+++ b/sobremesa.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Trabalho Confeitaria/produtos.css">
-    <link rel="shortcut icon" href="../Trabalho Confeitaria/IMAGENS/bolo-icon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="produtos.css">
+    <link rel="shortcut icon" href="IMAGENS/bolo-icon.ico" type="image/x-icon">
     <title>Confeitos da Jô</title>
 </head>
 
@@ -18,7 +18,7 @@
                 <div class="card">
                     <div class="face face1">
                         <div class="content">
-                            <img src="../Trabalho Confeitaria/IMAGENS/potechocolate_2.jpg" class="im1">
+                            <img src="IMAGENS/potechocolate_2.jpg" class="im1">
                             <h2>Chocolate</h2>
                         </div>
                     </div>
@@ -35,7 +35,7 @@
                 <div class="card">
                     <div class="face face1">
                         <div class="content">
-                            <img src="../Trabalho Confeitaria/IMAGENS/poteninho_4.jpg">
+                            <img src="IMAGENS/poteninho_4.jpg">
                             <h3>Nutella e Ninho</h3>
                         </div>
                     </div>
@@ -51,7 +51,7 @@
                 <div class="card">
                     <div class="face face1">
                         <div class="content">
-                            <img src="../Trabalho Confeitaria/IMAGENS/potemaracuja_2.jpg">
+                            <img src="IMAGENS/potemaracuja_2.jpg">
                             <h3>Maracujá</h3>
                         </div>
                     </div>
